add file gitignore

--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
     <p>vì anh quá ngu si hay vì em đã yêu vội vàng</p>
     <p>vì cả tương lai nên là em trả nợ cưu mang</p>
     <P>hihi</P>
+    <a href="#">google</a>
 </body>
 </html>
